# AgroSmart

./: LISTA DE AGROMICOS.xlsx  LISTA DE PRODUCTOS.xlsx  README.md  productos_unificado.xlsx  productos_unificado_con_filtros.xlsx  productos_unificado_traducido.xlsx
Estructura del proyecto/: index.html  script.js  styles.css
agrosmart/: .env.example  README.md  docker-compose.yml  pyproject.toml
agrosmart/app/: config.py  deps.py  main.py
agrosmart/app/ai/: orchestrator.py  tools.py
agrosmart/app/ai/prompts/: recommend.md
agrosmart/app/data/: repository.py  sheets.py  validators.py
agrosmart/app/schemas/: base.py  customer.py  message.py  product.py  sale.py
agrosmart/app/services/: customers.py  orders.py  recommendations.py
agrosmart/app/storage/: logs.py  sessions.py
agrosmart/app/utils/: math.py  text.py
agrosmart/app/whatsapp/: client.py  state.py  webhook.py
agrosmart/infra/docker/: Dockerfile
agrosmart/infra/scripts/: run_local.sh  seed_sheets.py
agrosmart/tests/: test_repository.py  test_tools.py  test_webhook.py
