[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agrosmart"
version = "0.1.0"
description = "Asistente inteligente para agricultores via WhatsApp"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "openai",
    "gspread",
    "pandas",
    "openpyxl",
    "requests"
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]